--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,18 +37,41 @@ body {
   box-sizing: border-box;
 }
 
-/*
-.xterm::-webkit-scrollbar {
-  width: 8px;
-}
+/** SCROLLBARS **/
 
-.xterm::-webkit-scrollbar-thumb {
-  background-color: #ccc;
+/*
+:root {
+  color-scheme: dark;
 }
 */
 
-/** SCROLLBARS **/
+::-webkit-scrollbar {
+  width: 8px;
+}
 
-:root {
-  color-scheme: dark;
+::-webkit-scrollbar-thumb {
+  background-color: #808080;
+  border-radius: 3px;
+  margin-top: 2px;
+  margin-bottom: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #b3b3b3;
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #4d4d4d;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #000;
+  border-radius: 4px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  margin-right: 2px;
+}
+
+.xterm-viewport {
+  margin-right: 3px !important;
 }
